--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </div>
     <div id="budget-info"></div>
 
-    <script src="app.js"></script> <!-- Link to your JS file -->
+    <script src="app.js?v1"></script> <!-- Link to your JS file -->
 </body>
 </html>
