--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             document.getElementById('daily-tracker').innerHTML = `
                 <h4>Daily Tracker</h4>
                         <p>Today: ${today}
-                            <br>Time: ${time}
+                            <!--<br>Time: ${time}-->
                 <br>Available Budget: ${parseFloat(budgetInfo.balance).toFixed(2)}
                 <br><small>Tomorrow will add the daily budget</small></p>
             `;
